# eval2otel

./: .eslintrc.js  .gitignore  .jest-output.json  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  jest.config.js  package-lock.json  package.json
.claude/: settings.local.json
dashboards/: datadog-dashboard.json  grafana-dashboard.json
docs/: backends.md  semconv-mapping.md
examples/: README.md  agent-workflow.ts  basic-usage.js  basic-usage.ts  batch-processing.js  helpers-convert.ts  ollama-basic.js  ollama-integration.md  ollama-real-test.js  provider-anthropic.ts  provider-bedrock.ts  provider-cohere.ts  provider-ollama.ts  provider-openai-chat.ts  provider-openai-compat.ts  provider-vertex.ts  structured-validation.ts  tool-execution.js  tool-execution.ts
python/: README.md  pyproject.toml
python/eval2otel/: __init__.py  auto.py  autoinstrument.py  contract.py  instrumentations.py  models.py  otel.py  privacy.py
python/tests/: test_contract.py
scripts/: verify-readme.ts
src/: attributes.ts  cli.ts  contract.ts  converter.ts  helpers.ts  index.ts  metrics.ts  provider-adapter.ts  providers.ts  rag.ts  semconv.ts  types.ts  validation.ts
test/: advanced.test.ts  agent-rag.test.ts  basic.test.ts  cli-autodetect-fallback.test.ts  cli-autodetect-openai-compatible.test.ts  cli-autodetect-strict.test.ts  cli-flags.test.ts  cli-parseargs.test.ts  cli-provider-mode-unknown.test.ts  cli-provider-mode.test.ts  cli.test.ts  conformance-contract.test.ts  converter-agent-rag-events.test.ts  converter-attributes.test.ts  converter-conv-json-redaction.test.ts  converter-events.test.ts  converter-json-toolargs.test.ts  converter-links-provider.test.ts  converter-misc-branches.test.ts  converter-privacy-caps.test.ts  converter-private-default.test.ts  helpers.test.ts  index-error.test.ts  rag.test.ts  (+21 more)
test-harness/: Dockerfile  README.md  docker-compose-simple.yml  docker-compose.yml  ollama-examples.js  otel-collector-config.yaml  package-lock.json  package.json  run-ollama-examples.sh  run-simple.sh  run-tests.sh  test-e2e-host.js  test-e2e.js  test-simple.js  verify-telemetry.js
(+15 files in other folders)
